# AI

./: README.md  ValueIteration.py  Value_Policy_Iteration.py  setup.sh
.github/workflows/: bashLint.yml  pylint.yml
.ipynb_checkpoints/: Value_Iteration-checkpoint.ipynb
AI_agents/: dummy_agent.ipynb  dummy_agent.py  hf_dataset.py  llama-index-agent.py  llama-index-creator.py  llama-index-tools.py  smolsagent.py  toolsagent.py
BT/simple_pick/: CMakeLists.txt  settings.json
C++/: .oops.cpp.swp  README.md  memory  memory.cpp  oops  oops.cpp  smart_pointers  smart_pointers.cpp
C++/ccwc/: ccwc.cpp
C++/multi_threaded_concepts/: .conditional_variable.cpp.swp  .mutex_example.cpp.swo
Coding_Challenges/ccat/: ccat  ccat.cpp
Coding_Challenges/dns/: dns.py
Coding_Challenges/load_balancer/: backend_server.py  load_balancer.py
DQN/: dqn.py
Kalman_Filter/: README.md  kalman_filter_linear_book.py
llms/: Tokenization.ipynb  backprop.ipynb  make_more.ipynb  make_more_basics.ipynb  make_more_mlp.ipynb  wavenet.ipynb
multi_threaded_concepts/: .mutex_example.cpp.swp  README.md  mutex_example  mutex_example.cpp
pose_graph_optimization/: .README.md.swp  CMakeLists.txt  README.md  after_opt.txt  g.cpp  hello-world.cpp  plot_results.py  poseGraph2d.cpp
pose_graph_optimization/2D/: CMakeLists.txt  after_opt.txt  ceres-hello-world.cpp  plot_results.py  poseGraph2d.cpp
pose_graph_optimization/3D/: CMakeLists.txt  README.md  after_opt.txt  before_opt.txt  plot_results.py  poseGraph2d.cpp  poseGraph3d.cpp  sphere_bignoise_vertex3.g2o
python/: two_link_arm.py
(+9 files in other folders)
